# LLMsAgents-TextToSQL

./: .gitignore  LICENSE  Makefile  README.md  distribution_of_work.md  pyproject.toml  test.py
documents/: LLM and Agents.drawio  test_bird.py
evaluation/: feedback_agent.ipynb  fixer_agent.ipynb  hyperparmater_optimization.ipynb  orchestrator_agent.ipynb  sample spider.ipynb  sample.ipynb  single_agent.ipynb
evaluation/results/results_20241129_222227/: results.csv
evaluation/results/results_20241129_232856/: results.csv
evaluation/results/results_20241129_233145/: results.csv
evaluation/results/results_20241129_233419/: results.csv
evaluation/results/results_20241129_234948/: results.csv  run_config.json
evaluation/results/results_20241201_205038/: results.csv
evaluation/results/results_20241201_205330/: results.csv  run.txt
evaluation/results/results_20241201_211033/: results.csv
evaluation/results/results_full_run_291124/: results.csv  (+1 more)
evaulation/: feedback_agent.ipynb  orchestrator_agent.ipynb  sample.ipynb  single_agent.ipynb
sample/: dev.csv  dev_noisy.csv  dev_only_noisy.csv  spider.csv
setup/: setup.py  test_bird.py
src/: approach_evaluator.py  bird_data_loader.py  example.py
src/agents/: creator_agent.py  creator_agent_langchain.py  docker-compose.yaml  feedback_agent.py  fixer_agent.py  langchain_agent_test.py  orchestrator_agent.py  state_types.py  types.py  validator_agent.py
src/prompt_templates/: creator_agent.py  feedback_agent.py  fixer_agent.py  select_relevant_database.py  select_relevant_tables.py
src/setup/: download_data.py
src/templates/: feedback_agent.py  fixer_agent.py
src/tools/: database.py  database_test.ipynb
(+29 files in other folders)
