[tool.poetry]
name = "llmsagents-texttosql"
version = "0.1.0"
description = ""
authors = ["Adrian Hagen <adrian.hagen@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.3"
requests = "^2.32.3"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
