[tool.poetry]
name = "llmsagents-texttosql"
version = "0.1.0"
description = ""
authors = ["Adrian Hagen <adrian.hagen@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.2.3"
requests = "^2.32.3"
tqdm = "^4.67.0"
nltk = "^3.9.1"
langchain = "^0.3.7"
langchain-community = "^0.3.7"
langchain-openai = "^0.2.8"
sqlglot = "^25.31.4"
sqlparse = "^0.5.2"
langchain-groq = "^0.2.1"
langchain-ollama = "^0.2.0"
sqlfluff = "^3.2.5"
langgraph = "^0.2.53"
ipython = "^8.29.0"
anthropic = "^0.39.0"
langchain-anthropic = "^0.3.0"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
